--- a/org.purplegraphite.borrows/pubspec.yaml
+++ b/org.purplegraphite.borrows/pubspec.yaml
@@ -24,14 +24,20 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  provider: ^4.1.3
+  path_provider: ^1.6.11
+  path: ^1.6.4
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # hive_generator fails version resolving with flutter_test
+  # Uncomment this and comment flutter_test when using hive_generator
+  # hive_generator: ^0.7.0+2
+  build_runner: ^1.10.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
