--- a/org.purplegraphite.borrows/pubspec.yaml
+++ b/org.purplegraphite.borrows/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   path: ^1.6.4
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
-
+  finance: ^0.1.0
+  icofont_flutter: ^1.3.0
+  bubble_showcase: ^0.2.0+3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
