--- a/org.purplegraphite.borrows/pubspec.yaml
+++ b/org.purplegraphite.borrows/pubspec.yaml
@@ -31,10 +31,12 @@ dependencies:
   hive_flutter: ^0.3.0+2
   finance: ^0.1.0
   icofont_flutter: ^1.3.0
+  eva_icons_flutter: ^2.0.0
   guidance_bubbles: 
     path: ../packages/guidance_bubbles
   contacts_service: ^0.4.6
   permission_handler: ^5.0.1+1
+  google_fonts: ^1.1.0
   
 dev_dependencies:
   flutter_test:
